--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,10 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Utilisateur/Desktop/tomcat 8/apache-tomcat-8.5.85/lib/servlet-api.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Utilisateur/Desktop/tomcat%208/apache-tomcat-8.5.85/webapps/docs/servletapi/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
